# identity-gbggo-cli

./: .env.example  .gitignore  Cargo.toml  README.md  regions.example.yaml  setup-shell.sh
docs/: captain-playbook.md  endpoints.md  llm-usage.md  qa-captain-report.md
docs/sessions/edward.montoya/: captain-v2-launch-runbook.md
images/: document.b64
src/: config.rs  error.rs  exec.rs  fixtures.rs  lib.rs  main.rs  output.rs  render.rs
src/auth/: bearer.rs  mod.rs  oauth2.rs
src/cli/: describe.rs  describe_fixture.rs  list.rs  list_fixtures.rs  mod.rs
src/endpoints/: mod.rs
src/endpoints/captain/: device-connect.yaml  device-start.yaml  device-validate.yaml  interaction-fetch.yaml  interaction-schema.yaml  interaction-submit.yaml  journey-history.yaml  journey-schema-fetch.yaml  journey-start.yaml  journey-state-delete.yaml  journey-state-fetch.yaml  journey-task-list-schema.yaml  journey-task-list.yaml  journey-task-schema.yaml  journey-task-update.yaml  journey-terminate.yaml  version.yaml
src/endpoints/captain_v1/: journey-device-connect.yaml  journey-device-start.yaml  journey-device-validate.yaml  journey-start.yaml  journey-state-delete.yaml  journey-state-fetch.yaml  journey-task-list-schema.yaml  journey-task-list.yaml  journey-task-schema.yaml  journey-task-update.yaml
src/endpoints/captain_v2/: device-connect.yaml  device-start.yaml  device-validate.yaml  (+10 more)
tests/: auth.rs  captain_versioning.rs  catalog_validation.rs  describe.rs  disabled.rs  fixtures.rs  integration.rs  no_secrets.rs  prod_gate.rs  template_render.rs
tests/common/: mod.rs
(+46 files in other folders)
